--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -21,10 +21,15 @@
     margin-left: 1rem;
     text-decoration: none;
     color: #000;
+    font-weight: 500;
 
     &:hover {
       text-decoration: underline;
     }
   }
 
+  .nav-list {
+    display: flex;
+    gap: 60px;
+  }
 }
