--- a/src/styles/Error.scss
+++ b/src/styles/Error.scss
@@ -5,19 +5,19 @@
 
   .error-title {
     margin: 0;
-    font-size: 15rem;
+    font-size: 14vw;
     font-weight: bold;
   }
 
   .error-message {
-    font-size: 2rem;
-    margin-bottom: 6rem;
+    font-size: 2.2vw;
+    margin-bottom: 4rem;
   }
 
   .error-link {
     color: black;
     text-decoration: underline;
-    font-size: 1.2rem;
+    font-size: 1.5vw;
 
     &:hover {
       text-decoration: none;
