--- a/src/styles/Banner.scss
+++ b/src/styles/Banner.scss
@@ -3,11 +3,12 @@
     height: auto;
     position: relative;
     overflow: hidden;
+    min-width: 300px;
 
 
     img {
         width: 100%;
-        height: auto;
+        height: clamp(150px, 25vw, 300px);
         object-fit: cover;
         display: block;
         border-radius: 25px;
@@ -18,9 +19,22 @@
         top: 40%;
         left: 50%;
         transform: translate(-50%, -50%);
-        font-size: 2.7rem;
+        font-size: clamp(20px, 3vw, 60px);
         color: white;
         text-align: center;
         width: 100%;
+        
     }
+}
+
+@media screen and (max-width: 768px) {
+  .banner h1 {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .banner h1 {
+    font-size: 1.2rem;
+  }
 }
