--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -7,6 +7,7 @@ footer {
     background-color: #000;
     color: white;
     text-align: center;
+    box-sizing: border-box;
 p {
     text-align: center;
 }
