--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -22,6 +22,7 @@
     text-decoration: none;
     color: #000;
     font-weight: 500;
+    white-space:nowrap;
 
     &:hover {
       text-decoration: underline;
@@ -33,3 +34,31 @@
     gap: 60px;
   }
 }
+
+
+
+
+
+  @media screen and (max-width: 768px) {
+  .header {
+    padding: 0.8rem 1rem;
+    gap: 20px;
+
+    .logo {
+      width: 100px;
+    }
+
+    .nav-list {
+      display: flex;
+      gap: 20px; 
+    }
+
+    nav a {
+      font-size: 0.85rem;
+      margin-left: 0; 
+    }
+  }
+
+
+}
+
