--- a/src/styles/Slideshow.scss
+++ b/src/styles/Slideshow.scss
@@ -9,9 +9,14 @@
 }
 
 .slideshow img {
-  width: 100%;       
-  height: 450px;       
-  object-fit: cover; 
+  height: clamp(200px, 50vw, 450px);
+  width: 100%;
+  object-fit: cover;
+
+}
+
+.chevron-icon {
+  width: clamp(20px, 7vw, 100px);
 }
 
 
@@ -45,14 +50,18 @@
 
   .slide-count{
     position: absolute;
-    bottom: 50px;
+    bottom: 10%;
     right: 50%;
     transform: translateX(50%);
     color: white;
     background-color: rgba(0,0,0,0.4);
     padding: 0.3rem 0.6rem;
     border-radius: 10px;
-    font-size: 1rem;
+    font-size: clamp(13px, 1vw, 18px);
+
+    @media (max-width:375px) {
+      bottom: 30px;
+    }
   }
 
 
