--- a/src/styles/Card.scss
+++ b/src/styles/Card.scss
@@ -15,10 +15,13 @@
   box-shadow: 0 8px 15px rgba(0,0,0,0.1);
   transition: transform 0.3s ease;
 
-  &:hover {
+}
+
+  .card:hover {
     transform: scale(1.05);
   }
 
+  
   .card-img {
     width: 100%;
     height: 200px;
@@ -31,7 +34,7 @@
     font-weight: 600;
     color: #333;
   }
-}
+
 
 .card-link {
   text-decoration: none;
