--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -8,6 +8,8 @@ footer {
     color: white;
     text-align: center;
     box-sizing: border-box;
+    width: 100%;
+    
     
 p {
     text-align: center;
