--- a/src/styles/Card.scss
+++ b/src/styles/Card.scss
@@ -1,20 +1,28 @@
 .cards-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  gap: 24px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 50px;
   padding-top: 50px;  
+  padding-bottom: 50px;
   width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  place-items: center;
 }
 
 .card {
   width: 300px;
+  height: 200px;
   border-radius: 10px;
   overflow: hidden;
   cursor: pointer;
-  box-shadow: 0 8px 15px rgba(0,0,0,0.1);
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
-
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  display: flex;
+  align-items: flex-end;
 }
 
   .card:hover {
@@ -23,7 +31,7 @@
 
   
   .card-img {
-    width: 100%;
+    width: 300px;
     height: 200px;
     object-fit: cover;
   }
@@ -32,10 +40,25 @@
     margin: 15px;
     font-size: 1.2rem;
     font-weight: 600;
-    color: #333;
+    color: #ffffff;
+    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6);
   }
 
 
 .card-link {
   text-decoration: none;
+}
+
+
+@media (max-width: 1024px) {
+  .cards-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 750px) {
+  .cards-container {
+    grid-template-columns: 1fr;
+  
+  }
 }
