--- a/src/styles/Slideshow.scss
+++ b/src/styles/Slideshow.scss
@@ -15,12 +15,9 @@
 
 }
 
-.chevron-icon {
-  width: clamp(20px, 7vw, 100px);
-}
-
 
   .slideshow-arrow {
+    background-color: rgba(0,0,0,);
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -60,7 +57,7 @@
     font-size: clamp(13px, 1vw, 18px);
 
     @media (max-width:375px) {
-      bottom: 30px;
+      display: none;
     }
   }
 
